--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
+
+    <title>My Site Title</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
   <body>
-
+<!-- This is a comment! -->
   </body>
 </html>
